markitdown 볼륨 target을 source와 동일하게 변경

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -57,7 +57,7 @@ services:
     restart: unless-stopped
     volumes:
       - source: ${MCP_MARKITDOWN_WORKDIR_PATH:-${HOME}/Projects}
-        target: /workdir
+        target: ${MCP_MARKITDOWN_WORKDIR_PATH:-${HOME}/Projects}
         type: bind
 
   playwright:
