ci: guidelines 서브모듈 초기화 단계 추가 및 checkout 옵션 수정

--- a/.github/workflows/update-guidelines-submodule.yaml
+++ b/.github/workflows/update-guidelines-submodule.yaml
@@ -25,8 +25,6 @@ jobs:
     steps:
       - name: Checkout parent repo
         uses: actions/checkout@v4
-        with:
-          submodules: 'recursive'
 
       - name: Configure git
         run: |-
@@ -51,6 +49,10 @@ jobs:
           fi
 
           echo "::notice::Validated inputs from $repo at $sha ($ref)"
+
+      - name: Initialize submodule
+        run: |-
+          git submodule init guidelines
 
       - name: Fetch latest submodule remote
         continue-on-error: true
