--- a/codex.toml
+++ b/codex.toml
@@ -1,83 +1,34 @@
 # Generated from config.yaml - do not edit manually
 
-[mcp_servers.awesome-copilot]
-type = "remote"
-enabled = false
-url = "http://localhost:48080/mcp"
-
-[mcp_servers.chrome-devtools-mcp]
-type = "local"
-enabled = false
-command = "npx"
-args = [ "-y", "chrome-devtools-mcp"]
-
-[mcp_servers.codex]
-type = "local"
-enabled = true
-command = "npx"
-args = [ "-y", "codex-mcp-server"]
-
 [mcp_servers.context7]
-type = "remote"
+type = "local"
 enabled = true
-url = "http://localhost:48082/mcp"
+command = "bunx"
+args = [ "-y", "@upstash/context7-mcp@latest"]
 
 [mcp_servers.fetch]
 type = "local"
 enabled = true
-command = "mcp-server-fetch"
-args = [ "--ignore-robots-txt"]
-
-[mcp_servers.filesystem]
-type = "local"
-enabled = false
-command = "sh"
-args = [ "-lc", "npx -y @modelcontextprotocol/server-filesystem $HOME/Projects"]
+command = "uvx"
+args = [ "mcp-server-fetch", "--ignore-robots-txt"]
 
 [mcp_servers.git]
 type = "local"
 enabled = true
-command = "mcp-server-git"
-
-[mcp_servers.jetbrains]
-type = "local"
-enabled = true
-command = "sh"
-args = [ "-lc", "java -jar $HOME/.config/github-copilot/intellij/mcpserver-stdio-253.29346.138-bundle.jar"]
+command = "uvx"
+args = [ "mcp-server-git"]
 
 [mcp_servers.markitdown]
-type = "remote"
-enabled = true
-url = "http://localhost:48083/mcp"
-
-[mcp_servers.memory]
 type = "local"
 enabled = true
-command = "npx"
-args = [ "-y", "@modelcontextprotocol/server-memory"]
+command = "uvx"
+args = [ "markitdown-mcp"]
 
 [mcp_servers.playwright]
-type = "remote"
-enabled = false
-url = "http://localhost:48084/mcp"
-
-[mcp_servers.ripgrep]
 type = "local"
 enabled = true
-command = "npx"
-args = [ "-y", "mcp-ripgrep"]
-
-[mcp_servers.sequential-thinking]
-type = "local"
-enabled = true
-command = "npx"
-args = [ "-y", "@modelcontextprotocol/server-sequential-thinking"]
-
-[mcp_servers.serena]
-type = "local"
-enabled = true
-command = "serena-mcp-server"
-args = [ "--enable-web-dashboard", "false", "--context", "codex", "--project-from-cwd"]
+command = "bunx"
+args = [ "-y", "@playwright/mcp@latest"]
 
 [mcp_servers.exa]
 type = "remote"
@@ -88,7 +39,4 @@ url = "https://mcp.exa.ai/mcp"
 type = "remote"
 enabled = true
 url = "https://mcp.grep.app"
-
-[mcp_servers.jetbrains.env]
-IJ_MCP_SERVER_PORT = "64342"
 
