--- a/config.yaml
+++ b/config.yaml
@@ -3,93 +3,39 @@
 # Edit this file only - other config files are generated from this
 
 mcp_servers:
-  awesome-copilot:
-    type: http
-    enabled: false
-    url: http://localhost:48080/mcp
-  chrome-devtools-mcp:
-    type: stdio
-    enabled: false
-    command: npx
-    args:
-      - -y
-      - chrome-devtools-mcp
-  codex:
-    type: stdio
-    enabled: true
-    command: npx
-    args:
-      - -y
-      - codex-mcp-server
   context7:
-    type: http
+    type: stdio
     enabled: true
-    url: http://localhost:48082/mcp
+    command: bunx
+    args:
+      - -y
+      - '@upstash/context7-mcp@latest'
   fetch:
     type: stdio
     enabled: true
-    command: mcp-server-fetch
+    command: uvx
     args:
+      - mcp-server-fetch
       - --ignore-robots-txt
-  filesystem:
-    type: stdio
-    enabled: false
-    command: sh
-    args:
-      - -lc
-      - npx -y @modelcontextprotocol/server-filesystem $HOME/Projects
   git:
     type: stdio
     enabled: true
-    command: mcp-server-git
-  jetbrains:
-    type: stdio
-    enabled: true
-    env:
-      IJ_MCP_SERVER_PORT: "64342"
-    command: sh
+    command: uvx
     args:
-      - -lc
-      - java -jar $HOME/.config/github-copilot/intellij/mcpserver-stdio-253.29346.138-bundle.jar
+      - mcp-server-git
   markitdown:
-    type: http
-    enabled: true
-    url: http://localhost:48083/mcp
-  memory:
     type: stdio
     enabled: true
-    command: npx
+    command: uvx
     args:
-      - -y
-      - '@modelcontextprotocol/server-memory'
+      - markitdown-mcp
   playwright:
-    type: http
-    enabled: false
-    url: http://localhost:48084/mcp
-  ripgrep:
     type: stdio
     enabled: true
-    command: npx
+    command: bunx
     args:
       - -y
-      - mcp-ripgrep
-  sequential-thinking:
-    type: stdio
-    enabled: true
-    command: npx
-    args:
-      - -y
-      - '@modelcontextprotocol/server-sequential-thinking'
-  serena:
-    type: stdio
-    enabled: true
-    command: serena-mcp-server
-    args:
-      - --enable-web-dashboard
-      - "false"
-      - --context
-      - codex
-      - --project-from-cwd
+      - '@playwright/mcp@latest'
   exa:
     type: http
     enabled: true
